--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,9 +1,12 @@
 .Weather {
     font-family: Arial, Helvetica, sans-serif;
-    background: white;
     border-radius: 16px;
+    background: no-repeat;
+    background-image: url("img/Clouds_2.png");
+    background-size: cover;
     padding: 60px;
 }
+
 
 .WeatherInfo {
     margin-top: 20px;
@@ -61,7 +64,7 @@
     color: #c45985;
     font-weight: 400;
     margin-left: 10px;
-    font-size: 65px;
+    font-size: 70px;
     line-height: 1;
 }
 
