--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -1,6 +1,8 @@
 .WeatherForecast {
     text-align: center;
     margin-top: 35px;
+    
+    color: rgba(192, 113, 160, 0.989);
 }
 
 .WeatherForecast-temperature-min {
